--- a/LLMscratch (2).ipynb
+++ b/LLMscratch (2).ipynb
@@ -12,23 +12,12 @@
       "version": "3.13.1"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat_minor": 5,
   "nbformat": 4,
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/ayushmorya/Word-Based-Tokenization/blob/main/LLMscratch%20(2).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "id": "2fff478f-9034-4dc6-8659-95d44240a78f",
       "cell_type": "markdown",
@@ -76,7 +65,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "27c14564-d7cb-4a56-9738-c2c0bc800a46",
-        "outputId": "1a052f49-6ec7-4bdc-8d17-735b2434bf5a"
+        "outputId": "6b67d6bf-4aed-4537-dba2-db777aecdd41"
       },
       "outputs": [
         {
@@ -88,7 +77,7 @@
           ]
         }
       ],
-      "execution_count": 4
+      "execution_count": 68
     },
     {
       "id": "eada8891-13d6-4e83-a85e-a1efe56582b4",
@@ -161,7 +150,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "900b6579-c277-49cf-872a-7cf40cb9e2ee",
-        "outputId": "cd8a9d17-2847-4f93-d329-04e8637881c0"
+        "outputId": "09405e72-eaf2-40ce-d2a6-397ad82eae44"
       },
       "outputs": [
         {
@@ -172,7 +161,7 @@
           ]
         }
       ],
-      "execution_count": 5
+      "execution_count": 69
     },
     {
       "id": "2f33208e-35eb-4a70-b7a3-b5f3e1bc9751",
@@ -211,7 +200,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d3eeb254-c756-4722-94a4-cc3f9785c9a8",
-        "outputId": "b4c7d0d4-4ae3-40c1-8f78-bd25e94fa9f6"
+        "outputId": "96f33b08-e7d2-462c-b6bb-d55f418801c5"
       },
       "outputs": [
         {
@@ -222,7 +211,7 @@
           ]
         }
       ],
-      "execution_count": 6
+      "execution_count": 70
     },
     {
       "id": "7b61ade4-463f-44bc-9976-aec7d6f65090",
@@ -262,7 +251,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d0ef262e-37e5-4725-abe9-9c24dfb99c01",
-        "outputId": "ba2c7b5c-88e9-48ec-96cc-b01819488dd3"
+        "outputId": "046c5e51-55eb-4405-da0c-700543a2a1ac"
       },
       "outputs": [
         {
@@ -273,7 +262,7 @@
           ]
         }
       ],
-      "execution_count": 7
+      "execution_count": 71
     },
     {
       "id": "6dc5c372-8160-4524-90dc-4eab791c1f14",
@@ -324,7 +313,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4f9b69d3-dcf0-47f5-ac63-2f4e8bae7789",
-        "outputId": "f0b9e15a-84aa-4562-a341-4467bc93848e"
+        "outputId": "f34eeff7-de7e-4cae-d077-9b8168ae3b9d"
       },
       "outputs": [
         {
@@ -335,7 +324,7 @@
           ]
         }
       ],
-      "execution_count": 8
+      "execution_count": 72
     },
     {
       "id": "d4259f78-e21b-409c-acf8-1138e7fa0bf8",
@@ -351,7 +340,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d4259f78-e21b-409c-acf8-1138e7fa0bf8",
-        "outputId": "9c11e1b7-64d7-420c-d394-04fe83831fef"
+        "outputId": "5590d5a1-d351-4dd4-c4bc-74c228b2de93"
       },
       "outputs": [
         {
@@ -362,7 +351,7 @@
           ]
         }
       ],
-      "execution_count": 9
+      "execution_count": 73
     },
     {
       "id": "f592b777-00e8-4609-980b-91a555d2d006",
@@ -379,7 +368,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f592b777-00e8-4609-980b-91a555d2d006",
-        "outputId": "3ac02d58-3f29-418d-f348-42f53e9a826f"
+        "outputId": "3a0732ee-0791-41bc-c56e-ad2403cbfe9b"
       },
       "outputs": [
         {
@@ -390,7 +379,7 @@
           ]
         }
       ],
-      "execution_count": 10
+      "execution_count": 74
     },
     {
       "id": "1a4b0a9e-8c73-4a45-ac8d-4314e9e13f9f",
@@ -418,7 +407,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8d34e68c-197d-48fd-bf72-32d957e0fa66",
-        "outputId": "401e3e8a-3302-4f7c-93bf-8b940dac9f45"
+        "outputId": "f9daf57f-e283-4989-ad2b-57dc14426ce8"
       },
       "outputs": [
         {
@@ -429,7 +418,7 @@
           ]
         }
       ],
-      "execution_count": 11
+      "execution_count": 75
     },
     {
       "id": "a83c4811-2fbb-4588-9983-d33fa6c7e003",
@@ -443,7 +432,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a83c4811-2fbb-4588-9983-d33fa6c7e003",
-        "outputId": "701353b1-59bf-4f7a-eb17-ef59bb0b7460"
+        "outputId": "3e4e3cd4-1c50-48c1-bae0-7cae6ebbaec8"
       },
       "outputs": [
         {
@@ -454,7 +443,7 @@
           ]
         }
       ],
-      "execution_count": 12
+      "execution_count": 76
     },
     {
       "id": "cd9aa5da-b08a-407d-9027-b2d33798f619",
@@ -494,7 +483,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "87a914b6-e296-4fd7-a4bc-54dca7cc6175",
-        "outputId": "121b26fe-a5e3-4a84-ed05-98f1502a4053"
+        "outputId": "04397322-9623-4e4e-f54e-e79a5446b217"
       },
       "outputs": [
         {
@@ -505,7 +494,7 @@
           ]
         }
       ],
-      "execution_count": 13
+      "execution_count": 77
     },
     {
       "id": "f87c2308-3363-4295-b3ad-36618216fd45",
@@ -531,7 +520,7 @@
         "id": "9d7bf329-8f64-4aac-be16-446e1cb12dbe"
       },
       "outputs": [],
-      "execution_count": 14
+      "execution_count": 78
     },
     {
       "id": "a2e99fe4-2aeb-4f6e-a2b7-f34f59566afd",
@@ -548,7 +537,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a2e99fe4-2aeb-4f6e-a2b7-f34f59566afd",
-        "outputId": "dd893b58-c7f1-4ec4-aaf6-9278339e2bad"
+        "outputId": "13bc8258-bf31-498c-be23-7980ede1c9e2"
       },
       "outputs": [
         {
@@ -609,7 +598,7 @@
           ]
         }
       ],
-      "execution_count": 15
+      "execution_count": 79
     },
     {
       "id": "77f4ddba-48da-411c-8ebf-9d074b598002",
@@ -695,7 +684,7 @@
         "id": "56a3817d-18d2-498a-a25e-7c6fa62d33e3"
       },
       "outputs": [],
-      "execution_count": 16
+      "execution_count": 80
     },
     {
       "id": "3d45d6f0-d29d-409c-881b-6ac4cf31abf0",
@@ -726,7 +715,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6c17438a-74f8-4387-ac08-033c928911e5",
-        "outputId": "ed1d6293-b864-439c-b03a-26bd618ce6b6"
+        "outputId": "f7974e5a-a86b-45d7-adb7-f88ce1f3b8ae"
       },
       "outputs": [
         {
@@ -737,7 +726,7 @@
           ]
         }
       ],
-      "execution_count": 17
+      "execution_count": 81
     },
     {
       "id": "21d2ad40-2cb8-4bb4-8c1c-bac97522b452",
@@ -765,7 +754,7 @@
           "height": 35
         },
         "id": "9771cacb-6ac6-415e-afab-20fa304606e3",
-        "outputId": "cc3968e2-1e6b-4fde-824d-803cfa8782b2"
+        "outputId": "8ae591a3-4810-4d6c-91f9-e0c85e73fe5e"
       },
       "outputs": [
         {
@@ -779,10 +768,10 @@
             }
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 82
         }
       ],
-      "execution_count": 18
+      "execution_count": 82
     },
     {
       "id": "c87d56f1-a927-4f9f-9587-037bec7b2020",
@@ -825,7 +814,7 @@
           "height": 304
         },
         "id": "b906b02d-9f57-4aaa-885a-eb4126ef9222",
-        "outputId": "1c730cae-83e4-42e4-afa7-b9d31c821f2a"
+        "outputId": "1d678c09-c441-467c-8a57-a7daad295eb5"
       },
       "outputs": [
         {
@@ -842,7 +831,7 @@
           ]
         }
       ],
-      "execution_count": 19
+      "execution_count": 83
     },
     {
       "id": "3655337b-22d3-468b-b8da-0008322f2070",
@@ -917,7 +906,7 @@
         "id": "a6cc522d-a0fd-44d8-ad64-0108fa7db4f8"
       },
       "outputs": [],
-      "execution_count": 20
+      "execution_count": 84
     },
     {
       "id": "5edd3242-81d1-420f-916f-e2c6f4bba02e",
@@ -931,7 +920,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5edd3242-81d1-420f-916f-e2c6f4bba02e",
-        "outputId": "8e85a427-1de2-4fdd-d5e5-013a627ee975"
+        "outputId": "0286a915-d911-4cba-b16d-966b6a608488"
       },
       "outputs": [
         {
@@ -942,10 +931,10 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 85
         }
       ],
-      "execution_count": 21
+      "execution_count": 85
     },
     {
       "id": "67db441b-607d-4e3f-9817-35f14d464546",
@@ -984,7 +973,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "91c14e87-f588-4f43-af85-92126506ca7f",
-        "outputId": "def7e074-f893-4dbb-eb38-c7f5cb536ea0"
+        "outputId": "320d3416-180a-410d-bd69-7fd0fed21597"
       },
       "outputs": [
         {
@@ -999,7 +988,7 @@
           ]
         }
       ],
-      "execution_count": 22
+      "execution_count": 86
     },
     {
       "id": "f829fe62-7a73-4287-8a2a-94f9bab97de0",
@@ -1056,7 +1045,7 @@
         "id": "5fa74605-b59e-47d1-8e21-6a2509fbb805"
       },
       "outputs": [],
-      "execution_count": 23
+      "execution_count": 87
     },
     {
       "id": "98405bba-834e-4b11-bd1d-7a5477898a6c",
@@ -1074,7 +1063,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "98405bba-834e-4b11-bd1d-7a5477898a6c",
-        "outputId": "90573539-26ad-4037-ba65-67c49bb6e50f"
+        "outputId": "e758f8cb-f0ce-4c98-a5a5-df16a4792057"
       },
       "outputs": [
         {
@@ -1085,7 +1074,7 @@
           ]
         }
       ],
-      "execution_count": 24
+      "execution_count": 88
     },
     {
       "id": "9783f8ce-518a-4831-89fa-b33d9e00030a",
@@ -1099,7 +1088,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9783f8ce-518a-4831-89fa-b33d9e00030a",
-        "outputId": "bc5ca383-9912-45f0-e0a3-bccfe6639a25"
+        "outputId": "5ddd721f-6131-42d1-a954-22fd6051c260"
       },
       "outputs": [
         {
@@ -1110,10 +1099,10 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 89
         }
       ],
-      "execution_count": 25
+      "execution_count": 89
     },
     {
       "id": "18e6fedc-408b-4260-993f-79498acea426",
@@ -1128,7 +1117,7 @@
           "height": 35
         },
         "id": "18e6fedc-408b-4260-993f-79498acea426",
-        "outputId": "ce5dff7c-cb86-4e46-e435-e15de4c5b25d"
+        "outputId": "c4feb9f0-0991-49ca-82fe-846e49e1dd10"
       },
       "outputs": [
         {
@@ -1142,10 +1131,10 @@
             }
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 90
         }
       ],
-      "execution_count": 29
+      "execution_count": 90
     },
     {
       "id": "95299169-f284-417f-ae6d-df22f078cfd4",
@@ -1227,10 +1216,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4KBldn7N5eIr",
-        "outputId": "55b1a244-aff9-4b3a-f570-32b9c1f5e24c"
+        "outputId": "8ea60bfc-255e-420d-e0b0-a8ed2737e9c5"
       },
       "id": "4KBldn7N5eIr",
-      "execution_count": 30,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "stream",
@@ -1250,8 +1239,20 @@
         "id": "B6cIzeGq55F1"
       },
       "id": "B6cIzeGq55F1",
-      "execution_count": 32,
+      "execution_count": 92,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<div style=\"background-color:#ffe0b2; padding: 10px; border-left: 5px solid #fb8c00;\">\n",
+        "    <b>Note:</b> The usage of this tokenizer is similar to <code>SimpleTokenizerV2</code> we implemented previously via an <code>encode</code> method.\n",
+        "</div>"
+      ],
+      "metadata": {
+        "id": "ITpD8QEN-W3U"
+      },
+      "id": "ITpD8QEN-W3U"
     },
     {
       "cell_type": "code",
@@ -1268,10 +1269,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4JqSjIwC5_3a",
-        "outputId": "84b53956-8aa7-46c0-b9ef-0fff0536c1f5"
+        "outputId": "68e997c6-13e3-40c4-d0c9-944a668be9db"
       },
       "id": "4JqSjIwC5_3a",
-      "execution_count": 33,
+      "execution_count": 93,
       "outputs": [
         {
           "output_type": "stream",
@@ -1283,14 +1284,171 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "The code above prints the following token IDs:"
+      ],
       "metadata": {
-        "id": "6AVX43CG92vl"
+        "id": "4_X-f7_g_DeU"
       },
-      "id": "6AVX43CG92vl",
-      "execution_count": null,
-      "outputs": []
+      "id": "4_X-f7_g_DeU"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We can then convert the token IDs back into text using the decode medthod, similar to our SimpleTokenizerV2 earlier."
+      ],
+      "metadata": {
+        "id": "JGdRRLVB_m0K"
+      },
+      "id": "JGdRRLVB_m0K"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "strings = tokenizer.decode(integers)\n",
+        "print(strings)"
+      ],
+      "metadata": {
+        "id": "XTACmAvI_xBy",
+        "outputId": "3d6d2487-7b1c-40af-bff5-2436805c9ede",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "XTACmAvI_xBy",
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello, do you like tea? <|endoftext|> In the sunlit of terracesof someunknownPlace.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Note:** We can make two noteworthy ovbservations based on the token IDs and decoded text above.\n",
+        "\n",
+        "First, the <|endoftext|> token is assigned a relativelt large token IDs, namely, 50256.\n",
+        "\n",
+        "In fact, the BPE tokenizer, which was used to train models such as GPT-2, GPT-3, and the original model used in ChatGPT, has a total vocabulary soze of 50,257\n",
+        "with <|endoftext|> being assigned the largest token ID.\n"
+      ],
+      "metadata": {
+        "id": "Mj7b9LqPCQAR"
+      },
+      "id": "Mj7b9LqPCQAR"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Note:** Second, the BPE tokenizer above encodes and decodes unknown words, such as\n",
+        "\"someunknownPlace\" correctly.\n",
+        "\n",
+        "The BPE tokenizer can handle any unknown word. How does it achieve this without using <|unk|> tokens?"
+      ],
+      "metadata": {
+        "id": "fRWiwp9cDNCy"
+      },
+      "id": "fRWiwp9cDNCy"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The algorithm underlying BPE breaks down words that aren't in its predefined vocabulary\n",
+        "into smaller subword units or even individual characters.\n",
+        "\n",
+        "The enables it to handle out-ofvocabulary words.\n",
+        "\n",
+        "So, thanks to the BPE algorithm, if the tokenizer encounters an\n",
+        "unfamiliar word during tokenization, it can represent it as a sequence of subword tokens or\n",
+        "characters"
+      ],
+      "metadata": {
+        "id": "PmdXkXyRDhbl"
+      },
+      "id": "PmdXkXyRDhbl"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Let us take another simple example to illustrate how the BPE tokenizer deals with unknown tokens**"
+      ],
+      "metadata": {
+        "id": "LptimRAxDl1F"
+      },
+      "id": "LptimRAxDl1F"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "integers = tokenizer.encode(\"Ayush Morya\")\n",
+        "print(integers)\n",
+        "\n",
+        "strings = tokenizer.decode(integers)\n",
+        "print(strings)"
+      ],
+      "metadata": {
+        "id": "FnN0KjxLDgzS",
+        "outputId": "ea62d857-9252-4cdc-b760-6b860a7c90eb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "FnN0KjxLDgzS",
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[42012, 1530, 337, 652, 64]\n",
+            "Ayush Morya\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **DATA SAMPLING WITH SLIDING WINDOW**"
+      ],
+      "metadata": {
+        "id": "cGlkdIyaGoc-"
+      },
+      "id": "cGlkdIyaGoc-"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open(\"the-verdict.txt\", \"r\", encoding=\"utf-8\") as f:\n",
+        "    raw_text = f.read()\n",
+        "\n",
+        "enc_text = tokenizer.encode(raw_text)\n",
+        "print(len(enc_text))"
+      ],
+      "metadata": {
+        "id": "W1P3U2nLDqsy",
+        "outputId": "77da4e5f-2c29-4f87-c259-098d773bbb87",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "W1P3U2nLDqsy",
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5145\n"
+          ]
+        }
+      ]
     }
   ]
 }
