--- a/LLMscratch (2).ipynb
+++ b/LLMscratch (2).ipynb
@@ -732,7 +732,8 @@
       "id": "21d2ad40-2cb8-4bb4-8c1c-bac97522b452",
       "cell_type": "markdown",
       "source": [
-        "<div style=\"background-color:#e8f5e9; padding: 10px; border-left: 5px solid #43a047;\">\n",
+        "<div style=\"background-color:#e8f5e9; padding: 10px;\n",
+        "border-left: 5px solid #43a047;\">\n",
         "    <b>Note:</b> The code above prints the following token IDs:<br>\n",
         "    Next, let's see if we can turn these token IDs back into text using the <code>decode</code> method.\n",
         "</div>\n"
@@ -1310,11 +1311,11 @@
         "print(strings)"
       ],
       "metadata": {
-        "id": "XTACmAvI_xBy",
-        "outputId": "3d6d2487-7b1c-40af-bff5-2436805c9ede",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XTACmAvI_xBy",
+        "outputId": "3d6d2487-7b1c-40af-bff5-2436805c9ede"
       },
       "id": "XTACmAvI_xBy",
       "execution_count": 94,
@@ -1393,11 +1394,11 @@
         "print(strings)"
       ],
       "metadata": {
-        "id": "FnN0KjxLDgzS",
-        "outputId": "ea62d857-9252-4cdc-b760-6b860a7c90eb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FnN0KjxLDgzS",
+        "outputId": "ea62d857-9252-4cdc-b760-6b860a7c90eb"
       },
       "id": "FnN0KjxLDgzS",
       "execution_count": 95,
@@ -1432,11 +1433,11 @@
         "print(len(enc_text))"
       ],
       "metadata": {
-        "id": "W1P3U2nLDqsy",
-        "outputId": "77da4e5f-2c29-4f87-c259-098d773bbb87",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "W1P3U2nLDqsy",
+        "outputId": "77da4e5f-2c29-4f87-c259-098d773bbb87"
       },
       "id": "W1P3U2nLDqsy",
       "execution_count": 96,
