--- a/LLMscratch (2).ipynb
+++ b/LLMscratch (2).ipynb
@@ -62,22 +62,26 @@
       "metadata": {
         "trusted": true,
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 193
         },
         "id": "27c14564-d7cb-4a56-9738-c2c0bc800a46",
-        "outputId": "dcd64180-2f91-4552-f2a0-3c472789045b"
+        "outputId": "1ded8705-2197-4e41-8764-e9c319354d98"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "The total number of characters in the story: 20479\n",
-            "I HAD always thought Jack Gisburn rather a cheap genius--though a good fellow enough--so it was no \n"
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "[Errno 2] No such file or directory: 'the-verdict.txt'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-2241892684.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"the-verdict.txt\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"utf-8\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mraw_text\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"The total number of characters in the story:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mraw_text\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mraw_text\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m99\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'the-verdict.txt'"
           ]
         }
       ],
-      "execution_count": 49
+      "execution_count": 1
     },
     {
       "id": "eada8891-13d6-4e83-a85e-a1efe56582b4",
@@ -161,7 +165,7 @@
           ]
         }
       ],
-      "execution_count": 5
+      "execution_count": null
     },
     {
       "id": "2f33208e-35eb-4a70-b7a3-b5f3e1bc9751",
@@ -211,7 +215,7 @@
           ]
         }
       ],
-      "execution_count": 6
+      "execution_count": null
     },
     {
       "id": "7b61ade4-463f-44bc-9976-aec7d6f65090",
@@ -262,7 +266,7 @@
           ]
         }
       ],
-      "execution_count": 7
+      "execution_count": null
     },
     {
       "id": "6dc5c372-8160-4524-90dc-4eab791c1f14",
@@ -324,7 +328,7 @@
           ]
         }
       ],
-      "execution_count": 8
+      "execution_count": null
     },
     {
       "id": "d4259f78-e21b-409c-acf8-1138e7fa0bf8",
@@ -351,7 +355,7 @@
           ]
         }
       ],
-      "execution_count": 9
+      "execution_count": null
     },
     {
       "id": "f592b777-00e8-4609-980b-91a555d2d006",
@@ -379,7 +383,7 @@
           ]
         }
       ],
-      "execution_count": 10
+      "execution_count": null
     },
     {
       "id": "1a4b0a9e-8c73-4a45-ac8d-4314e9e13f9f",
@@ -418,7 +422,7 @@
           ]
         }
       ],
-      "execution_count": 47
+      "execution_count": null
     },
     {
       "id": "a83c4811-2fbb-4588-9983-d33fa6c7e003",
@@ -443,7 +447,7 @@
           ]
         }
       ],
-      "execution_count": 12
+      "execution_count": null
     },
     {
       "id": "cd9aa5da-b08a-407d-9027-b2d33798f619",
@@ -494,7 +498,7 @@
           ]
         }
       ],
-      "execution_count": 13
+      "execution_count": null
     },
     {
       "id": "f87c2308-3363-4295-b3ad-36618216fd45",
@@ -520,7 +524,7 @@
         "id": "9d7bf329-8f64-4aac-be16-446e1cb12dbe"
       },
       "outputs": [],
-      "execution_count": 14
+      "execution_count": null
     },
     {
       "id": "a2e99fe4-2aeb-4f6e-a2b7-f34f59566afd",
@@ -848,7 +852,7 @@
           ]
         }
       ],
-      "execution_count": 53
+      "execution_count": null
     },
     {
       "id": "77f4ddba-48da-411c-8ebf-9d074b598002",
@@ -934,7 +938,7 @@
         "id": "56a3817d-18d2-498a-a25e-7c6fa62d33e3"
       },
       "outputs": [],
-      "execution_count": 16
+      "execution_count": null
     },
     {
       "id": "3d45d6f0-d29d-409c-881b-6ac4cf31abf0",
@@ -976,7 +980,7 @@
           ]
         }
       ],
-      "execution_count": 17
+      "execution_count": null
     },
     {
       "id": "21d2ad40-2cb8-4bb4-8c1c-bac97522b452",
@@ -1022,7 +1026,7 @@
           "execution_count": 18
         }
       ],
-      "execution_count": 18
+      "execution_count": null
     },
     {
       "id": "c87d56f1-a927-4f9f-9587-037bec7b2020",
@@ -1082,7 +1086,7 @@
           ]
         }
       ],
-      "execution_count": 19
+      "execution_count": null
     },
     {
       "id": "3655337b-22d3-468b-b8da-0008322f2070",
@@ -1157,7 +1161,7 @@
         "id": "a6cc522d-a0fd-44d8-ad64-0108fa7db4f8"
       },
       "outputs": [],
-      "execution_count": 20
+      "execution_count": null
     },
     {
       "id": "5edd3242-81d1-420f-916f-e2c6f4bba02e",
@@ -1185,7 +1189,7 @@
           "execution_count": 21
         }
       ],
-      "execution_count": 21
+      "execution_count": null
     },
     {
       "id": "67db441b-607d-4e3f-9817-35f14d464546",
@@ -1239,7 +1243,7 @@
           ]
         }
       ],
-      "execution_count": 22
+      "execution_count": null
     },
     {
       "id": "f829fe62-7a73-4287-8a2a-94f9bab97de0",
@@ -1296,7 +1300,7 @@
         "id": "5fa74605-b59e-47d1-8e21-6a2509fbb805"
       },
       "outputs": [],
-      "execution_count": 23
+      "execution_count": null
     },
     {
       "id": "98405bba-834e-4b11-bd1d-7a5477898a6c",
@@ -1325,7 +1329,7 @@
           ]
         }
       ],
-      "execution_count": 24
+      "execution_count": null
     },
     {
       "id": "9783f8ce-518a-4831-89fa-b33d9e00030a",
@@ -1353,7 +1357,7 @@
           "execution_count": 25
         }
       ],
-      "execution_count": 25
+      "execution_count": null
     },
     {
       "id": "18e6fedc-408b-4260-993f-79498acea426",
@@ -1385,7 +1389,7 @@
           "execution_count": 26
         }
       ],
-      "execution_count": 26
+      "execution_count": null
     },
     {
       "id": "95299169-f284-417f-ae6d-df22f078cfd4",
@@ -1470,7 +1474,7 @@
         "outputId": "bd3ac172-7658-41e3-909f-78f454844948"
       },
       "id": "4KBldn7N5eIr",
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1490,7 +1494,7 @@
         "id": "B6cIzeGq55F1"
       },
       "id": "B6cIzeGq55F1",
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1523,7 +1527,7 @@
         "outputId": "b6feafd2-a20c-427e-ad0f-8b65282865de"
       },
       "id": "4JqSjIwC5_3a",
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1568,7 +1572,7 @@
         "outputId": "fe8f2a7a-dfb7-489d-edb9-683f47752a4b"
       },
       "id": "XTACmAvI_xBy",
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1651,7 +1655,7 @@
         "outputId": "9a9c7548-a05b-40d5-9651-09c14c6870fb"
       },
       "id": "FnN0KjxLDgzS",
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1680,7 +1684,7 @@
         "outputId": "77860f70-d28f-4d4b-f824-3c0715d6eabb"
       },
       "id": "W1P3U2nLDqsy",
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1738,7 +1742,7 @@
         "outputId": "7b380183-2715-4ccc-c43e-454a352e2915"
       },
       "id": "RE1B1J0pywd6",
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1783,7 +1787,7 @@
         "outputId": "40a10120-032a-417c-abe0-47abc21f5d88"
       },
       "id": "Vs_-zf650AhG",
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1841,7 +1845,7 @@
         "outputId": "d0fdc7db-ed09-41ee-f44c-8e1f204c8d3e"
       },
       "id": "klr4FYUD1JSD",
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1882,7 +1886,7 @@
         "outputId": "e1f06bfd-d2d9-4d0d-9525-3729717b67ad"
       },
       "id": "sNHopxqW5CEJ",
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1939,7 +1943,7 @@
         "outputId": "66302fb8-bbc7-429f-a492-efec51ee645b"
       },
       "id": "TzmcKoWd-MCs",
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2034,7 +2038,7 @@
         "id": "L66La1GrAk_O"
       },
       "id": "L66La1GrAk_O",
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2068,7 +2072,7 @@
         "id": "Dzqf5ZjOJPZJ"
       },
       "id": "Dzqf5ZjOJPZJ",
-      "execution_count": 83,
+      "execution_count": 2,
       "outputs": []
     },
     {
