--- a/LLMscratch (2).ipynb
+++ b/LLMscratch (2).ipynb
@@ -81,7 +81,7 @@
           ]
         }
       ],
-      "execution_count": 1
+      "execution_count": null
     },
     {
       "id": "eada8891-13d6-4e83-a85e-a1efe56582b4",
@@ -2072,16 +2072,134 @@
         "id": "Dzqf5ZjOJPZJ"
       },
       "id": "Dzqf5ZjOJPZJ",
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The GPTDatasetV1 class in listing 2.5 is based on the PyTorch Dataset class.\n",
+        "\n",
+        "It defines how individual rows are fetched from the dataset.\n",
+        "\n",
+        "Each row consists of a number of token IDs (based on a max_length) assigned to an input_chunk tensor.\n",
+        "\n",
+        "The target_chunk tensor contains the corresponding targets.\n",
+        "\n",
+        "I recommend reading on to see how the data returned from this dataset looks like when we combine the dataset with a PyTorch DataLoader -- this will bring additional intuition and clarity."
+      ],
+      "metadata": {
+        "id": "s0kAfNkkyabS"
+      },
+      "id": "s0kAfNkkyabS"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The following code will use the GPTDatasetV1 to load the inputs in batches via a PyTorch DataLoader:"
+      ],
+      "metadata": {
+        "id": "iJKMakcjycrR"
+      },
+      "id": "iJKMakcjycrR"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Step 1: Initialize the tokenizer\n",
+        "\n",
+        "Step 2: Create dataset\n",
+        "\n",
+        "Step 3: drop_last=True drops the last batch if it is shorter than the specified batch_size to prevent loss spikes during training\n",
+        "\n",
+        "Step 4: The number of CPU processes to use for preprocessing"
+      ],
+      "metadata": {
+        "id": "m32AN1cHygI5"
+      },
+      "id": "m32AN1cHygI5"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def create_dataloader_v1(txt, batch_size=4, max_length=256,\n",
+        "                         stride=128, shuffle=True, drop_last=True,\n",
+        "                         num_workers=0):\n",
+        "\n",
+        "    # Initialize the tokenizer\n",
+        "    tokenizer = tiktoken.get_encoding(\"gpt2\")\n",
+        "\n",
+        "    # Create dataset\n",
+        "    dataset = GPTDatasetV1(txt, tokenizer, max_length, stride)\n",
+        "\n",
+        "    # Create dataloader\n",
+        "    dataloader = DataLoader(\n",
+        "        dataset,\n",
+        "        batch_size=batch_size,\n",
+        "        shuffle=shuffle,\n",
+        "        drop_last=drop_last,\n",
+        "        num_workers=num_workers\n",
+        "    )\n",
+        "\n",
+        "    return dataloader"
+      ],
+      "metadata": {
+        "id": "ACcK8vVjX-zZ"
+      },
+      "id": "ACcK8vVjX-zZ",
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let's test the dataloader with a batch size of 1 for an LLM with a context size of 4,\n",
+        "\n",
+        "This will develop an intuition of how the GPTDatasetV1 class and the create_dataloader_v1 function work together:\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "8mDdin5uylmK"
+      },
+      "id": "8mDdin5uylmK"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open(\"the-verdict.txt\", \"r\", encoding=\"utf-8\") as f:\n",
+        "    raw_text = f.read()"
+      ],
+      "metadata": {
+        "id": "xU7auIDvyjkH",
+        "outputId": "84949899-f0cc-493b-9e99-426867dad8e1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 159
+        }
+      },
+      "id": "xU7auIDvyjkH",
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "[Errno 2] No such file or directory: 'the-verdict.txt'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-3205235529.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"the-verdict.txt\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"utf-8\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mraw_text\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'the-verdict.txt'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "ACcK8vVjX-zZ"
+        "id": "heREPDGZyniD"
       },
-      "id": "ACcK8vVjX-zZ",
+      "id": "heREPDGZyniD",
       "execution_count": null,
       "outputs": []
     }
